[project]
name = "pysprings-rlm"
version = "0.1.0"
description = "PySprings Recursive Language Model talk materials"
readme = "docs/index.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "entangled-cli>=2.4.2",
    "ruff>=0.15.4",
    "zensical>=0.0.24",
]

[tool.uv]
package = false
